# TensorRT-YOLOv8-ByteTrack

./: .gitignore  CMakeLists.txt  config.ini  main.cpp
bytetrack/include/: BYTETracker.h
bytetrack/src/: BYTETracker.cpp  kalmanFilter.cpp
tensorrtx-yolov8/: CMakeLists.txt  gen_wts.py
tensorrtx-yolov8/include/: config.h
yolo/: CMakeLists.txt
yolo/include/: config.h  public.h  yolov8_lib.h
yolo/src/: yolov8_lib.cpp
